--- a/databases/setup/package.json
+++ b/databases/setup/package.json
@@ -9,6 +9,7 @@
     "mysql2": "^3.3.1"
   },
   "scripts": {
-    "seed": "node index.js"
+    "seed": "yarn run waitForDb && node index.js",
+    "waitForDb": "node wait-for-db.js"
   }
 }
