chore(bash): setup.sh & docker improvement

--- a/agents/agent-nodejs/docker-compose.yml
+++ b/agents/agent-nodejs/docker-compose.yml
@@ -15,6 +15,5 @@ services:
       - /usr/src/app/dist
       - /usr/src/app/node_modules
     depends_on:
-      - postgres
-      - mysql
+      - ${DEPENDS_DB}
       - setup
