--- a/databases/setup/docker-compose.yml
+++ b/databases/setup/docker-compose.yml
@@ -10,5 +10,4 @@ services:
       - ./databases/setup/.:/usr/src/app
       - /usr/src/app/node_modules
     depends_on:
-      - postgres
-      - mysql
+      - ${DEPENDS_DB}
