--- a/agents/agent-nodejs/Dockerfile
+++ b/agents/agent-nodejs/Dockerfile
@@ -9,7 +9,7 @@ RUN npm install
 # Bundle app source
 COPY . .
 
-RUN npm run build
+RUN touch typings.js && npm run build
 
 EXPOSE ${APPLICATION_PORT}
 
