--- a/agents/agent-nodejs/Dockerfile
+++ b/agents/agent-nodejs/Dockerfile
@@ -9,8 +9,10 @@ RUN npm install
 # Bundle app source
 COPY . .
 
-RUN touch typings.js && npm run build
+RUN npm run build
 
 EXPOSE ${APPLICATION_PORT}
 
+COPY docker-entrypoint.sh /usr/local/bin/
+ENTRYPOINT ["docker-entrypoint.sh"]
 CMD ["npm", "run", "start:watch"]
